<resources>
    <string name="app_name">jhuynh-HabitTracker</string>
    <string name="main_title">HABIT TRACKER</string>

    <string name="creator_title">HABIT CREATOR</string>
    <string name="creator_habit_title">Habit Title:</string>
    <string name="hint_habit_title">enter habit title here</string>

    <string name="creation_date">Creation Date:</string>
    <string name="hyphen">-</string>

    <string name="repeat_days">Repeat on Days:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <string name="view_history">View History</string>

    <string-array name="spinner_views">
        <item>All Habits</item>
        <item>All History</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
