<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_habit_tracker_creator"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView_editorTitle"
        android:text="@string/creator_title"
        android:textSize="25sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView_editorDate"
        android:text="TODO: fill date text here"
        android:textSize="15dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_editorTitle"
        android:layout_centerHorizontal="true"/>

    <!--HABIT TITLE-->
    <TextView
        android:id="@+id/textView_habitTitle"
        android:text="@string/creator_habit_title"
        android:textSize="20sp"
        android:paddingTop="10dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_editorDate"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:id="@+id/editText_habitTitle"
        android:textSize="18sp"
        android:hint="@string/hint_habit_title"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_habitTitle"
        android:layout_alignParentLeft="true"

        android:maxLines="1" />
    <!--HABIT TITLE-->

    <!--DATE-->
    <TextView
        android:id="@+id/textView_creatorDateTitle"
        android:text="@string/creation_date"
        android:textSize="20sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_habitTitle"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/editText_date"
        android:textSize="18sp"
        android:inputType="number"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_creatorDateTitle"/>
    <!--DATE-->

    <!--REPEAT ON DAYS-->
    <TextView
        android:id="@+id/textView_daysToRepeat"
        android:text="@string/repeat_days"
        android:textSize="20sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editText_date"/>

    <Button
        android:id="@+id/btn_wednesday"
        android:background="@drawable/circle_button"
        android:text="@string/wednesday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_tuesday"
        android:background="@drawable/circle_button"
        android:text="@string/tuesday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toLeftOf="@+id/btn_wednesday"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_monday"
        android:background="@drawable/circle_button"
        android:text="@string/monday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toLeftOf="@+id/btn_tuesday"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sunday"
        android:background="@drawable/circle_button"
        android:text="@string/sunday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toLeftOf="@+id/btn_monday"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_thursday"
        android:background="@drawable/circle_button"
        android:text="@string/thursday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toRightOf="@+id/btn_wednesday"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_friday"
        android:background="@drawable/circle_button"
        android:text="@string/friday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toRightOf="@+id/btn_thursday"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_saturday"
        android:background="@drawable/circle_button"
        android:text="@string/saturday"

        android:layout_width="38dp"
        android:layout_height="38dp"

        android:layout_below="@id/textView_daysToRepeat"
        android:layout_toRightOf="@+id/btn_friday"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"/>
    <!--REPEAT ON DAYS-->


    <!--ADD AND CANCEL BUTTONS-->
    <Button
        android:id="@+id/btn_creatorCancel"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/teal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn_creatorOK"
        android:text="@string/add"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/teal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_creatorCancel"
        android:layout_marginRight="10dp"
        android:onClick="addHabit" />

    <!--ADD AND CANCEL BUTTONS-->

</RelativeLayout>