<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_habit_tracker_creator">

    <TextView
        android:id="@+id/singleView_habitTitleTitle"
        android:text="@string/creator_habit_title"
        android:textSize="25dp"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/singleView_habitTitle"
        android:text="to do"
        android:textSize="25dp"

        android:layout_marginLeft="10dp"
        android:layout_below="@id/singleView_habitTitleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/singleView_dateTitle"
        android:text="@string/creation_date"
        android:textSize="20dp"

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleView_habitTitle"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/singleView_date"
        android:text="to do"
        android:textSize="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleView_dateTitle"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/singleView_repeatDaysTitle"
        android:text="@string/repeat_days"
        android:textSize="20dp"

        android:layout_below="@id/singleView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/singleView_repeatDays"
        android:text="TODO: Sat, Mon, Tue, Wed, Thu, Fri, Sat"
        android:textSize="18dp"

        android:layout_below="@id/singleView_repeatDaysTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"/>

    <ImageButton
        android:id="@+id/btn_deleteHabit"
        android:src="@drawable/btn_trash"
        android:background="@android:color/transparent"

        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:onClick="onBtnClickDelete" />

    <ImageButton
        android:id="@+id/btn_completeHabit"
        android:src="@drawable/btn_complete"

        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toLeftOf="@id/btn_deleteHabit"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onBtnClickComplete"
        android:background="@color/orangered" />

</RelativeLayout>